Fix issues around SQL column with weird names